cryptsetup (2:2.0.0~rc0-1) UNRELEASED; urgency=low

  * New upstream release 2.0.0 RC0 (closes: #877566).  Highlights include:
    - Support for new on-disk LUKS2 format, offering authenticated disk
      encrption (EXPERIMENTAL), memory-hard PBKDF (argon2), kernel keyring for
      storage of key material, and more.
    - New CLI `integritysetup` which can setup standalone dm-integrity devices.
  * Also remove deprecated upstart configuration files on upgrade and purge.
  * debian/control: Bump Standards-Version to 4.1.0 (no changes necessary).
  * debian/*: Apply wrap-and-sort(1).

 -- Guilhem Moulin <guilhem@debian.org>  Sun, 17 Sep 2017 13:35:13 +0200

cryptsetup (2:1.7.5-1) unstable; urgency=low

  * New upstream release 1.7.5.
  * cryptroot-unlock: When the standard input is a TTY, keep prompting for
    passphrases until there are no more devices to unlock. (Closes: #866786)
  * cryptsetup.prerm: Don't try to call `dmsetup table` to list dm-crypt
    devices when the dm_mod module isn't loaded. (Closes: #870673)
  * Rename upstream signing key from debian/upstream/signing-key.asc to
    debian/upstream-signing-key.asc in order to avoid lintian error
    orig-tarball-missing-upstream-signature" (we use the key to verify
    signature on upstrem's git tags).
  * Remove deprecated upstart configuration files: /etc/init/cryptdisks.conf
    and /etc/init/cryptdisks-udev.conf.  Cf. `lintian-info --tags
    package-installs-deprecated-upstart-configuration`.
  * debian/cryptsetup.{postinst,postrm}: Don't hard-code path to
    update-initramfs(1).
  * debian/rules: Include /usr/share/dpkg/pkg-info.mk to avoid parsing
    dpkg-parsechangelog(1) output.
  * debian/control: Bump Standards-Version to 4.0.0 (no changes necessary).

 -- Guilhem Moulin <guilhem@debian.org>  Thu, 14 Sep 2017 13:00:23 +0200

cryptsetup (2:1.7.3-4) unstable; urgency=high

  [ Guilhem Moulin ]
  * Drop obsolete update-rc.d parameters.  Thanks to Michael Biebl for the