@@ -68,7 +68,7 @@ Description: disk encryption support - command line tools
  .
  This package provides cryptsetup, cryptsetup-reencrypt and luksformat.
 
-Package: libcryptsetup4
+Package: libcryptsetup12
 Section: libs
 Architecture: linux-any
 Multi-Arch: same
@@ -88,7 +88,7 @@ Package: libcryptsetup-dev
 Section: libdevel
 Architecture: linux-any
 Multi-Arch: same
-Depends: libcryptsetup4 (= ${binary:Version}), ${misc:Depends}
+Depends: libcryptsetup12 (= ${binary:Version}), ${misc:Depends}
 Description: disk encryption support - development files
  Cryptsetup provides an interface for configuring encryption on block
  devices (such as /home or swap partitions), using the Linux kernel
@@ -110,7 +110,7 @@ Description: disk encryption support - commandline tools (udeb)
  .
  This udeb package provides cryptsetup for the Debian Installer.
 
-Package: libcryptsetup4-udeb
+Package: libcryptsetup12-udeb
 Section: debian-installer
 Package-Type: udeb
 Architecture: linux-any
