@@ -1,64 +1,0 @@
-libcryptsetup.so.4 libcryptsetup4 #MINVER#
- CRYPTSETUP_1.0@CRYPTSETUP_1.0 2:1.4
- crypt_activate_by_keyfile@CRYPTSETUP_1.0 2:1.4
- crypt_activate_by_keyfile_offset@CRYPTSETUP_1.0 2:1.4.3
- crypt_activate_by_passphrase@CRYPTSETUP_1.0 2:1.4
- crypt_activate_by_volume_key@CRYPTSETUP_1.0 2:1.4
- crypt_benchmark@CRYPTSETUP_1.0 2:1.6
- crypt_benchmark_kdf@CRYPTSETUP_1.0 2:1.6
- crypt_deactivate@CRYPTSETUP_1.0 2:1.4
- crypt_dump@CRYPTSETUP_1.0 2:1.4
- crypt_format@CRYPTSETUP_1.0 2:1.4
- crypt_free@CRYPTSETUP_1.0 2:1.4
- crypt_get_active_device@CRYPTSETUP_1.0 2:1.4
- crypt_get_cipher@CRYPTSETUP_1.0 2:1.4
- crypt_get_cipher_mode@CRYPTSETUP_1.0 2:1.4
- crypt_get_data_offset@CRYPTSETUP_1.0 2:1.4
- crypt_get_device_name@CRYPTSETUP_1.0 2:1.4
- crypt_get_dir@CRYPTSETUP_1.0 2:1.4
- crypt_get_error@CRYPTSETUP_1.0 2:1.4
- crypt_get_iv_offset@CRYPTSETUP_1.0 2:1.4
- crypt_get_rng_type@CRYPTSETUP_1.0 2:1.4
- crypt_get_type@CRYPTSETUP_1.0 2:1.4
- crypt_get_uuid@CRYPTSETUP_1.0 2:1.4
- crypt_get_verity_info@CRYPTSETUP_1.0 2:1.5
- crypt_get_volume_key_size@CRYPTSETUP_1.0 2:1.4
- crypt_header_backup@CRYPTSETUP_1.0 2:1.4
- crypt_header_restore@CRYPTSETUP_1.0 2:1.4
- crypt_init@CRYPTSETUP_1.0 2:1.4
- crypt_init_by_name@CRYPTSETUP_1.0 2:1.4
- crypt_init_by_name_and_header@CRYPTSETUP_1.0 2:1.4
- crypt_keyslot_add_by_keyfile@CRYPTSETUP_1.0 2:1.4
- crypt_keyslot_add_by_keyfile_offset@CRYPTSETUP_1.0 2:1.4.3
- crypt_keyslot_add_by_passphrase@CRYPTSETUP_1.0 2:1.4
- crypt_keyslot_add_by_volume_key@CRYPTSETUP_1.0 2:1.4
- crypt_keyslot_area@CRYPTSETUP_1.0 2:1.6
- crypt_keyslot_change_by_passphrase@CRYPTSETUP_1.0 2:1.6
- crypt_keyslot_destroy@CRYPTSETUP_1.0 2:1.4
- crypt_keyslot_max@CRYPTSETUP_1.0 2:1.4
- crypt_keyslot_status@CRYPTSETUP_1.0 2:1.4
- crypt_last_error@CRYPTSETUP_1.0 2:1.4
- crypt_load@CRYPTSETUP_1.0 2:1.4
- crypt_log@CRYPTSETUP_1.0 2:1.4
- crypt_memory_lock@CRYPTSETUP_1.0 2:1.4
- crypt_repair@CRYPTSETUP_1.0 2:1.4.3
- crypt_resize@CRYPTSETUP_1.0 2:1.4
- crypt_resume_by_keyfile@CRYPTSETUP_1.0 2:1.4
- crypt_resume_by_keyfile_offset@CRYPTSETUP_1.0 2:1.4.3
- crypt_resume_by_passphrase@CRYPTSETUP_1.0 2:1.4
- crypt_set_confirm_callback@CRYPTSETUP_1.0 2:1.4
- crypt_set_data_device@CRYPTSETUP_1.0 2:1.4
- crypt_set_debug_level@CRYPTSETUP_1.0 2:1.4
- crypt_set_iterarion_time@CRYPTSETUP_1.0 2:1.4
- crypt_set_iteration_time@CRYPTSETUP_1.0 2:1.4.1
- crypt_set_log_callback@CRYPTSETUP_1.0 2:1.4
- crypt_set_password_callback@CRYPTSETUP_1.0 2:1.4
- crypt_set_password_retry@CRYPTSETUP_1.0 2:1.4
- crypt_set_password_verify@CRYPTSETUP_1.0 2:1.4
- crypt_set_rng_type@CRYPTSETUP_1.0 2:1.4
- crypt_set_timeout@CRYPTSETUP_1.0 2:1.4
- crypt_set_uuid@CRYPTSETUP_1.0 2:1.4
- crypt_status@CRYPTSETUP_1.0 2:1.4
- crypt_suspend@CRYPTSETUP_1.0 2:1.4
- crypt_volume_key_get@CRYPTSETUP_1.0 2:1.4
- crypt_volume_key_verify@CRYPTSETUP_1.0 2:1.4
